YelpCamp/v4/readme.md
# Yelp Camp

* Add Landing Page
* Add Campgrounds Page and list all Campgrounds

## Each Campground has

* Name
* Image

## Layout and Basic Styling
* Create our  header and footer Partials
* Add in Bootstrap

## Creating New Campgrounds
* Set up NEW Campground Route
* Add in body-parser
* Setup route to show form
* Add Basic unstyled form

## Style the Campgrounds Page*
* Add a better header/title
* Make Campgrounds display in a grid

## Style the Navbar and Form
* Add a navbar to all templates
* Style the new Caampground form

## Add Mongoose
* Install and Configure Mongoose
* Setup Campground Model
* Use Campground Model inside of our routes

## Refactor Mongoose Code
* Create a Models Directory
* Use Modules.exports
* Require everything Correctly

## Add Seeds File
* Add a seeds.js file
* Run the seeds file every time server starts

## Add Comment Models
* Make our errors go away
* Display comments on show page

## Comment New/Create
* Discuss nested Route
* Add the comment new and create routes
* Add the new comment form